updating redirect URI for production

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-spotify-player",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://espitiaandres.github.io/studyfi",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.1.0",
     "moment": "^2.27.0",
     "rc-texty": "^0.2.0",
     "react": "^16.13.1",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
