--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@testing-library/user-event": "^7.1.2",
     "gh-pages": "^3.1.0",
     "moment": "^2.27.0",
+    "query-string": "^6.13.1",
     "rc-texty": "^0.2.0",
     "react": "^16.13.1",
     "react-color-extractor": "^1.1.2",
     "react-dom": "^16.13.1",
+    "react-emoji": "^0.5.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll-to-bottom": "^4.0.0",
     "react-spring": "^8.0.27",
     "react-typist": "^2.0.5",
-    "react-typist-loop": "0.0.5"
+    "react-typist-loop": "0.0.5",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-socket-io": "^0.2.5"
   }
 }
