--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "gh-pages": "^3.1.0",
-    "moment": "^2.27.0",
+    "moment": "^2.29.0",
+    "moment-timezone": "^0.5.31",
     "query-string": "^6.13.1",
     "rc-texty": "^0.2.0",
     "react": "^16.13.1",
