--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.0",
     "moment-timezone": "^0.5.31",
+    "node-sass": "^4.14.1",
     "query-string": "^6.13.1",
     "rc-texty": "^0.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-color-extractor": "^1.1.2",
     "react-dom": "^16.13.1",
     "react-emoji": "^0.5.0",
@@ -29,6 +32,8 @@
     "react-spring": "^8.0.27",
     "react-typist": "^2.0.5",
     "react-typist-loop": "0.0.5",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
