--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "query-string": "^6.13.1",
+    "rc-table": "^7.10.0",
     "rc-texty": "^0.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-color-extractor": "^1.1.2",
     "react-dom": "^16.13.1",
     "react-emoji": "^0.5.0",
@@ -30,6 +32,7 @@
     "react-scripts": "3.4.3",
     "react-scroll-to-bottom": "^4.0.0",
     "react-spring": "^8.0.27",
+    "react-table": "^7.5.1",
     "react-typist": "^2.0.5",
     "react-typist-loop": "0.0.5",
     "sass": "^1.26.11",
