--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-color-extractor": "^1.1.2",
     "react-dom": "^16.13.1",
     "react-emoji": "^0.5.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "react-scroll-to-bottom": "^4.0.0",
     "react-spring": "^8.0.27",
     "react-table": "^7.5.1",
+    "react-tooltip": "^4.2.10",
     "react-typist": "^2.0.5",
     "react-typist-loop": "0.0.5",
     "sass": "^1.26.11",
