--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "gh-pages": "^3.1.0",
+    "jest": "^26.6.1",
     "moment": "^2.29.0",
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
@@ -29,6 +30,7 @@
     "react-color-extractor": "^1.1.2",
     "react-dom": "^16.13.1",
     "react-emoji": "^0.5.0",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
