--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "animate.css": "^4.1.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.0",
     "moment-timezone": "^0.5.31",
@@ -48,7 +50,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --setupFilesAfterEnv=./src/setupTests.js",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
