added unit tests for remaining components

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --setupFilesAfterEnv=./src/setupTests.js",
+    "test": "react-scripts test --setupFilesAfterEnv=./src/tests/setupTests.js",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
