--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.1",
+    "apexcharts": "^3.22.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "enzyme": "^3.11.0",
@@ -25,6 +26,7 @@
     "rc-table": "^7.10.0",
     "rc-texty": "^0.2.0",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
