--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "daisyui": "^2.29.0",
+    "immer": "^9.0.15",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-emoji": "^0.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
