--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "moment-timezone": "^0.5.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-emoji": "^0.5.0"
+    "react-emoji": "^0.5.0",
+    "react-router-dom": "^6.4.0",
+    "react-spring": "^9.5.4",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
